laravel-app-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: laravel-test-ns
  labels:
    name: laravel-nginx
